# RayTracer

./: .gitignore  CMakeLists.txt  README.adoc  README.md  main.cpp
Scenes/: test0.ascii
Scenes/HW2/: test4_last.ascii  test5_1.ascii
Scenes/HW3/: test_color.ascii  test_dof.ascii  test_intersection.ascii
Scenes/xml/: cornell_correcy.xml  cornellbox_ldr.xml
docs/hw2/: report.adoc  report.html
docs/hw3/: report.adoc  report.html  test1.tif  test2.tif  test3.tif
include/: OBJ_Loader.hpp  aabb.hpp  area_light.hpp  camera.hpp  dir_light.hpp  kd_tree.hpp  light.hpp  material.hpp  payload.hpp  photon.hpp  photon_integrator.hpp  ray.hpp  renderer.hpp  scene.hpp  scene_loaders.hpp  tinyobjloader.hpp  utils.hpp  vertex.hpp
include/primitives/: mesh.hpp  sphere.hpp
include/shaders/: shader.hpp
include/tinyxml/: CMakeLists.txt
src/: kd_tree.cpp  material.cpp  mesh.cpp  photon_integrator.cpp  renderer.cpp  scene.cpp  scene_io.cpp  sphere.cpp
src/shaders/: shader.cpp
